--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
     "browser": true,
     "node": true
   },
-  "parser": "react-scripts/node_modules/babel-eslint",
+  "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module",
     "allowImportExportEverywhere": true
