--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "7.2.0",
+    "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
