chore: create with typescript

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,24 @@
 {
+  "root": true,
   "env": {
     "browser": true,
     "node": true
   },
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "allowImportExportEverywhere": true
+    "allowImportExportEverywhere": true,
+    "project": "./tsconfig.json"
   },
-  "extends": ["airbnb", "prettier", "prettier/react"],
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "prettier/react",
+    "prettier/@typescript-eslint"
+  ],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/no-named-as-default": 0,
     "import/no-named-as-default-member": 0
   }
